--- a/styles.css
+++ b/styles.css
@@ -180,4 +180,30 @@ body {
   
 }.body-reviews-title {
   text-align: center;
+
+}.body-review-1 {
+  width: 80%;
+  border: solid 2px white;
+
+}.body-review {
+  display: flex;
+  width: 100%;
+  margin-top: 5%;
+  text-align: center;
+  margin-bottom: 5%;
+  
+} a{
+  cursor: pointer;
+
+}.body-timer {
+  text-align: center;
+
+}.body-co2 {
+  text-align: center;
+
+}.co2 {
+  color: rgb(12, 230, 12);
+
+}.body-timer-text, .body-co2-text {
+  text-align: center;
 }
