--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,7 @@ body {
   background-color: rgb(247, 242, 242);
 
 }.footer-image-image {
+  margin-top: 1%;
   width: 15%;
 
 }.footer-image {
@@ -204,6 +205,7 @@ body {
 
 }.body-co2 {
   text-align: center;
+  
 
 }.co2 {
   color: rgb(12, 230, 12);
@@ -293,7 +295,10 @@ body {
   gap: 3%;
 
 }.body-help-text {
+  gap: 10%;
   text-align: center;
+  display: flex;
+  justify-content: center;
   margin-top: 2%;
   margin-bottom: 2%;
 
@@ -324,5 +329,29 @@ body {
 
 }.dropdown-content a:hover {
   background-color: gray;
+
+}.body-contact-title {
+ text-align: center; 
+
+}.body-contact-maps {
+  margin-top: 0%;
+  text-align: center;
+  
+}.body-contact-maps-title {
+  margin-top: 5%;
+  text-align: center;
+
+}.body-contact-maps-text {
+  margin-bottom: 5%;
+
+}.body-co2-div {
+  margin-bottom: 5%;
+
+}.body-purpose {
+  z-index: 1003;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  text-align: center;
 
 }
